--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -235,17 +235,15 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct/BaseEquipment
 
 [EditorStartup]
-LastLevel=/Game/Levels/MechanicsLevel
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned.TopDownCharacterCleaned
 OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
-OpenAssetsAtExit=/Game/Chloe/UI/I_InventoryInterface.I_InventoryInterface
-OpenAssetsAtExit=/Game/GW000979/DataStruct/Inventory.Inventory
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BasePickup.BasePickup
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3377,26 +3375,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/Levels/MechanicsLevel
-MRUItem3=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem4=/Game/Chloe/UI/I_InventoryInterface
-MRUItem5=/Game/GW000979/DataStruct/Inventory
-MRUItem6=/Game/GW000979/DataStruct/Structs/Weapon_Struct
-MRUItem7=/Game/GW000979/DataStruct/Structs/ItemStruct
-MRUItem8=/Game/GW000979/DataStruct/Structs/InvStruct
-MRUItem9=/Game/GW000979/DataStruct/InvEnum
-MRUItem10=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
-MRUItem11=/Game/Chloe/Weapon_Inventory/Weapon_Widget
-MRUItem12=/Game/GW000979/Weapons/WeaponDropMonster
-MRUItem13=/Game/GW000979/Weapons/WeaponDropHuman
-MRUItem14=/Game/GW000979/DataStruct/WeaponInt2
-MRUItem15=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
-MRUItem16=/Game/GW000979/Weapons/WeaponDropAnimal
-MRUItem17=/Game/AIAgent/BaseAI
-MRUItem18=/Game/c024816h/PickUpInterface
-MRUItem19=/Game/AIAgent/AIbot
+MRUItem0=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem1=/Game/GW000979/InvInterface/Inventory
+MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem5=/Game/Levels/MechanicsLevel
+MRUItem6=/Game/Chloe/UI/I_InventoryInterface
+MRUItem7=/Game/GW000979/DataStruct/Inventory
+MRUItem8=/Game/GW000979/DataStruct/Structs/Weapon_Struct
+MRUItem9=/Game/GW000979/DataStruct/Structs/ItemStruct
+MRUItem10=/Game/GW000979/DataStruct/Structs/InvStruct
+MRUItem11=/Game/GW000979/DataStruct/InvEnum
+MRUItem12=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
+MRUItem13=/Game/Chloe/Weapon_Inventory/Weapon_Widget
+MRUItem14=/Game/GW000979/Weapons/WeaponDropMonster
+MRUItem15=/Game/GW000979/Weapons/WeaponDropHuman
+MRUItem16=/Game/GW000979/DataStruct/WeaponInt2
+MRUItem17=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem18=/Game/GW000979/Weapons/WeaponDropAnimal
+MRUItem19=/Game/AIAgent/BaseAI
 
 [WidgetTemplatesExpanded]
 Extra=False
