--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -212,6 +212,7 @@ StrProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCa
 ByteProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 WeaponDropAnimal_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 WeaponDropMonster_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+BasePickup_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -235,15 +236,19 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct/BaseEquipment
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
 OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BasePickup.BasePickup
+OpenAssetsAtExit=/Game/Chloe/UI/I_InventoryInterface.I_InventoryInterface
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned.TopDownCharacterCleaned
+OpenAssetsAtExit=/Game/GW000979/DataStruct/Inventory.Inventory
+OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2404,6 +2409,8 @@ TopDownCharacterCleaned_C.Shape=True
 TopDownCharacterCleaned_C.Navigation=True
 TopDownCharacterCleaned_C.Materials=True
 PlayerControl_C.TransformCommon=True
+Ability_Wheel_C.Default=True
+PlayerState.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2476,12 +2483,12 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Default.Weapons\" "
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Default.Weapons\" "
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2554,10 +2561,11 @@ BaseWeapon_2_C="\"Object.NewVar_0\" \"Object.NewVar_0\" "
 WeaponDropHuman_C=
 Weapon Set Up="\"Struct.MaxRow\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
-Inventory_C="\"Object.Default.Weapons\" "
+Inventory_C=
 BaseAI_C=
 TopDownCharacterCleaned_C=
 Weapon_Widget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+BasePickup_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3298,7 +3306,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -3375,26 +3383,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
-MRUItem1=/Game/GW000979/InvInterface/Inventory
-MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem0=/Game/Widgets/Ability_Wheel
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/GW000979/DataStruct/Inventory
 MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
-MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem5=/Game/Levels/MechanicsLevel
-MRUItem6=/Game/Chloe/UI/I_InventoryInterface
-MRUItem7=/Game/GW000979/DataStruct/Inventory
-MRUItem8=/Game/GW000979/DataStruct/Structs/Weapon_Struct
-MRUItem9=/Game/GW000979/DataStruct/Structs/ItemStruct
-MRUItem10=/Game/GW000979/DataStruct/Structs/InvStruct
-MRUItem11=/Game/GW000979/DataStruct/InvEnum
-MRUItem12=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
-MRUItem13=/Game/Chloe/Weapon_Inventory/Weapon_Widget
-MRUItem14=/Game/GW000979/Weapons/WeaponDropMonster
-MRUItem15=/Game/GW000979/Weapons/WeaponDropHuman
-MRUItem16=/Game/GW000979/DataStruct/WeaponInt2
-MRUItem17=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
-MRUItem18=/Game/GW000979/Weapons/WeaponDropAnimal
-MRUItem19=/Game/AIAgent/BaseAI
+MRUItem4=/Game/Chloe/UI/I_InventoryInterface
+MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem7=/Game/GW000979/InvInterface/Inventory
+MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem9=/Game/GW000979/DataStruct/Structs/Weapon_Struct
+MRUItem10=/Game/GW000979/DataStruct/Structs/ItemStruct
+MRUItem11=/Game/GW000979/DataStruct/Structs/InvStruct
+MRUItem12=/Game/GW000979/DataStruct/InvEnum
+MRUItem13=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
+MRUItem14=/Game/Chloe/Weapon_Inventory/Weapon_Widget
+MRUItem15=/Game/GW000979/Weapons/WeaponDropMonster
+MRUItem16=/Game/GW000979/Weapons/WeaponDropHuman
+MRUItem17=/Game/GW000979/DataStruct/WeaponInt2
+MRUItem18=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem19=/Game/GW000979/Weapons/WeaponDropAnimal
 
 [WidgetTemplatesExpanded]
 Extra=False
