--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -236,19 +236,15 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct
 
 [EditorStartup]
-LastLevel=/Game/Levels/MechanicsLevel
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
 OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BasePickup.BasePickup
-OpenAssetsAtExit=/Game/Chloe/UI/I_InventoryInterface.I_InventoryInterface
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned.TopDownCharacterCleaned
 OpenAssetsAtExit=/Game/GW000979/DataStruct/Inventory.Inventory
-OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2477,13 +2473,14 @@ PlayerState.Actor=True
 /Game/GW000979/DataStruct/InvEnum.InvEnum=0
 /Game/GW000979/DataStruct/Structs/ItemStruct.ItemStruct=0
 /Game/GW000979/DataStruct/Structs/InvStruct.InvStruct=0
+/Game/TopDownBP/Blueprints/TopDownCharacterCleaned.TopDownCharacterCleaned=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -3383,12 +3380,12 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widgets/Ability_Wheel
-MRUItem1=/Game/Levels/MechanicsLevel
-MRUItem2=/Game/GW000979/DataStruct/Inventory
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
-MRUItem4=/Game/Chloe/UI/I_InventoryInterface
-MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem0=/Game/GW000979/DataStruct/Inventory
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem3=/Game/Widgets/Ability_Wheel
+MRUItem4=/Game/Levels/MechanicsLevel
+MRUItem5=/Game/Chloe/UI/I_InventoryInterface
 MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
 MRUItem7=/Game/GW000979/InvInterface/Inventory
 MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
