--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -179,7 +179,7 @@ FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValue
 Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-ArrayProperty=
+ArrayProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
@@ -207,6 +207,9 @@ PlayerControl_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultVal
 CoolDownComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+TopDownGameMode_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+CheckpointMarker_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+MulticastDelegateProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -230,13 +233,15 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/CheckpointMarker.CheckpointMarker
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2414,6 +2419,25 @@ BaseAI_C.MovementComponent=True
 BaseAI_C.Shape=True
 BaseAI_C.Navigation=True
 BaseAI_C.Materials=True
+CheckpointMarker_C.Tick=True
+CheckpointMarker_C.Rendering=True
+CheckpointMarker_C.Replication=True
+CheckpointMarker_C.Input=True
+CheckpointMarker_C.Actor=True
+BillboardComponent.Variable=True
+BillboardComponent.TransformCommon=True
+BillboardComponent.Sockets=True
+BillboardComponent.Sprite=True
+BillboardComponent.Rendering=True
+BillboardComponent.Tags=True
+BillboardComponent.ComponentReplication=True
+BillboardComponent.Cooking=True
+BillboardComponent.Events=True
+CheckpointMarker_C.TransformCommon=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+MulticastDelegateProperty.Variable=True
+MulticastDelegateProperty.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2486,12 +2510,12 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2572,11 +2596,16 @@ Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 CoolDownComponent_C=
 RangedAI_C=
 BaseAI_C=
+TopDownGameMode_C=
+GameModeBase=
+Info=
+CheckpointMarker_C="\"Object.CurrentTransform\" \"Object.CurrentTransform\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
 Perception_C.Service=True
 BoxComponent.Collision=True
+MulticastDelegateProperty.Variable=True
 
 [RootWindow]
 ScreenPosition=X=315.000 Y=155.000
@@ -3321,6 +3350,7 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/CheckpointMarker.CheckpointMarker;
 RecentlyPlaced=/Game/AIAgent/BaseAI.BaseAI;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
 RecentlyPlaced=/Game/Models/Shannon/body_WIP.body_WIP;
@@ -3340,7 +3370,6 @@ RecentlyPlaced=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest;
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop;
 RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
-RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3388,29 +3417,29 @@ ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/RangedTree
-MRUItem1=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem0=/Game/TopDownBP/Blueprints/CheckpointMarker
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
 MRUItem2=/Game/AIAgent/BaseAI
-MRUItem3=/Game/AIAgent/I_Damage
-MRUItem4=/Game/AIAgent/RangeFinder
-MRUItem5=/Game/AIAgent/TargetInterface
-MRUItem6=/Game/AIAgent/Baseprojectile
-MRUItem7=/Game/AIAgent/RangedController
-MRUItem8=/Game/AIAgent/AttackPlayer
-MRUItem9=/Game/TopDownBP/Blueprints/ICoolDown
-MRUItem10=/Game/TopDownBP/Blueprints/CoolDownComponent
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem12=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem13=/Game/TopDownBP/Blueprints/MainMenuPawn
-MRUItem14=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem15=/Game/Levels/MainMenu
-MRUItem16=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem17=/Game/Chloe/UI/Start_Menu
-MRUItem18=/Game/Chloe/UI/Settings_Menu
-MRUItem19=/Game/Chloe/UI/Pause_Menu
+MRUItem3=/Game/AIAgent/RangedTree
+MRUItem4=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem5=/Game/AIAgent/I_Damage
+MRUItem6=/Game/AIAgent/RangeFinder
+MRUItem7=/Game/AIAgent/TargetInterface
+MRUItem8=/Game/AIAgent/Baseprojectile
+MRUItem9=/Game/AIAgent/RangedController
+MRUItem10=/Game/AIAgent/AttackPlayer
+MRUItem11=/Game/TopDownBP/Blueprints/ICoolDown
+MRUItem12=/Game/TopDownBP/Blueprints/CoolDownComponent
+MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem14=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem15=/Game/TopDownBP/Blueprints/MainMenuPawn
+MRUItem16=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem17=/Game/Levels/MainMenu
+MRUItem18=/Game/Chloe/UI/Main_Menu_level/Main_Menu
+MRUItem19=/Game/Chloe/UI/Start_Menu
 
 [WidgetTemplatesExpanded]
 Extra=False
