Equip System in place

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -236,15 +236,16 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/GW000979/DataStruct
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BasePickup.BasePickup
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 OpenAssetsAtExit=/Game/GW000979/DataStruct/Inventory.Inventory
+OpenAssetsAtExit=/Engine/EditorBlueprintResources/StandardMacros.StandardMacros
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2407,6 +2408,9 @@ TopDownCharacterCleaned_C.Materials=True
 PlayerControl_C.TransformCommon=True
 Ability_Wheel_C.Default=True
 PlayerState.Actor=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2480,12 +2484,12 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Default.Weapons\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent=
+ActorComponent="\"Object.Default.Weapons\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2525,7 +2529,7 @@ REINST_TestPawn2_C_290="\"Object.Character.CharacterMovement.Object.Character Mo
 REINST_TestPawn2_C_294="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[15]\" "
-BaseWeapon_C="\"Object.Default.WeaponStats\" "
+BaseWeapon_C="\"Object.WeaponStats\" \"Object.WeaponStats\" "
 TestPawn3_C=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2558,7 +2562,7 @@ BaseWeapon_2_C="\"Object.NewVar_0\" \"Object.NewVar_0\" "
 WeaponDropHuman_C=
 Weapon Set Up="\"Struct.MaxRow\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
-Inventory_C=
+Inventory_C="\"Object.Default.Weapons\" "
 BaseAI_C=
 TopDownCharacterCleaned_C=
 Weapon_Widget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3380,26 +3384,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GW000979/DataStruct/Inventory
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
-MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
-MRUItem3=/Game/Widgets/Ability_Wheel
-MRUItem4=/Game/Levels/MechanicsLevel
-MRUItem5=/Game/Chloe/UI/I_InventoryInterface
-MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem7=/Game/GW000979/InvInterface/Inventory
-MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem9=/Game/GW000979/DataStruct/Structs/Weapon_Struct
-MRUItem10=/Game/GW000979/DataStruct/Structs/ItemStruct
-MRUItem11=/Game/GW000979/DataStruct/Structs/InvStruct
-MRUItem12=/Game/GW000979/DataStruct/InvEnum
-MRUItem13=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
-MRUItem14=/Game/Chloe/Weapon_Inventory/Weapon_Widget
-MRUItem15=/Game/GW000979/Weapons/WeaponDropMonster
-MRUItem16=/Game/GW000979/Weapons/WeaponDropHuman
-MRUItem17=/Game/GW000979/DataStruct/WeaponInt2
-MRUItem18=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
-MRUItem19=/Game/GW000979/Weapons/WeaponDropAnimal
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/GW000979/DataStruct/Inventory
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem6=/Game/Widgets/Ability_Wheel
+MRUItem7=/Game/Chloe/UI/I_InventoryInterface
+MRUItem8=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem9=/Game/GW000979/InvInterface/Inventory
+MRUItem10=/Game/GW000979/DataStruct/Structs/Weapon_Struct
+MRUItem11=/Game/GW000979/DataStruct/Structs/ItemStruct
+MRUItem12=/Game/GW000979/DataStruct/Structs/InvStruct
+MRUItem13=/Game/GW000979/DataStruct/InvEnum
+MRUItem14=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
+MRUItem15=/Game/Chloe/Weapon_Inventory/Weapon_Widget
+MRUItem16=/Game/GW000979/Weapons/WeaponDropMonster
+MRUItem17=/Game/GW000979/Weapons/WeaponDropHuman
+MRUItem18=/Game/GW000979/DataStruct/WeaponInt2
+MRUItem19=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
 
 [WidgetTemplatesExpanded]
 Extra=False
