Frontend for abilty wheel done

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,11 +104,11 @@ CurrentRotGridSize=0
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem4=/Game/Levels/MechanicsLevel
+MRUItem0=/Game/Levels/MechanicsLevel
+MRUItem1=/Game/Levels/Demo
+MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Chloe/UI/Main_Menu_level/Main_Menu
 MRUItem5=/Game/Levels/TerrainMap
 MRUItem6=/Game/Levels/BlockOut
 
@@ -235,10 +235,13 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 
 [EditorStartup]
-LastLevel=/Game/Levels/Demo
+LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
+OpenAssetsAtExit=/Game/Chloe/UI/HUD_Proto.HUD_Proto
+OpenAssetsAtExit=/Game/Will/AbilityEnum.AbilityEnum
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2443,6 +2446,12 @@ KillZVolume.Tags=True
 KillZVolume.BrushSettings=True
 KillZVolume.Cooking=True
 KillZVolume.Actor=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2515,7 +2524,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2576,8 +2585,8 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
@@ -2585,7 +2594,7 @@ Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Re
 ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Ability_Wheel_C="\"Object.Player Ref\" \"Object.Player Ref\" "
+Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
@@ -3422,26 +3431,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/DerivedClasses/RangedAI
-MRUItem1=/Game/Levels/Demo
-MRUItem2=/Game/AIAgent/RangedTree
-MRUItem3=/Game/AIAgent/BaseAI
-MRUItem4=/Game/AIAgent/I_Damage
-MRUItem5=/Game/AIAgent/RangeFinder
-MRUItem6=/Game/AIAgent/TargetInterface
-MRUItem7=/Game/AIAgent/Baseprojectile
-MRUItem8=/Game/AIAgent/RangedController
-MRUItem9=/Game/AIAgent/AttackPlayer
-MRUItem10=/Game/TopDownBP/Blueprints/ICoolDown
-MRUItem11=/Game/TopDownBP/Blueprints/CoolDownComponent
-MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem13=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem14=/Game/TopDownBP/Blueprints/MainMenuPawn
-MRUItem15=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem16=/Game/Levels/MainMenu
-MRUItem17=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem18=/Game/Chloe/UI/Start_Menu
-MRUItem19=/Game/Chloe/UI/Settings_Menu
+MRUItem0=/Game/Will/AbilityEnum
+MRUItem1=/Game/Chloe/UI/HUD_Proto
+MRUItem2=/Game/Widgets/Ability_Wheel
+MRUItem3=/Game/Levels/MechanicsLevel
+MRUItem4=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem5=/Game/Levels/Demo
+MRUItem6=/Game/AIAgent/RangedTree
+MRUItem7=/Game/AIAgent/BaseAI
+MRUItem8=/Game/AIAgent/I_Damage
+MRUItem9=/Game/AIAgent/RangeFinder
+MRUItem10=/Game/AIAgent/TargetInterface
+MRUItem11=/Game/AIAgent/Baseprojectile
+MRUItem12=/Game/AIAgent/RangedController
+MRUItem13=/Game/AIAgent/AttackPlayer
+MRUItem14=/Game/TopDownBP/Blueprints/ICoolDown
+MRUItem15=/Game/TopDownBP/Blueprints/CoolDownComponent
+MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem17=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem18=/Game/TopDownBP/Blueprints/MainMenuPawn
+MRUItem19=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [WidgetTemplatesExpanded]
 Extra=False
